# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: common.rs  lib.rs  solution2.rs  solution3.rs  solution45.rs  solution6.rs  solution7.rs  solution8.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: common.rs  lib.rs  solution2.rs  solution3.rs  solution4.rs  solution56.rs  solution7.rs  solution8.rs
seq/: Cargo.toml
seq/src/: lib.rs  parser.rs  solution12.rs  solution3.rs  solution4.rs  solution56.rs  solution7.rs
seq/tests/: 09-interaction-with-macrorules.rs
sorted/: Cargo.toml
sorted/src/: common.rs  lib.rs  solution1.rs  solution2.rs  solution3.rs  solution5.rs
