[package]
name = "seq"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = { version="1.0", features = ["span-locations"]}
quote = "1.0"
syn = "1.0"
# TODO
